Make dataset name nicer looking
Signed-off-by: henneberger <git@danielhenneberger.com>